# sobbingzombie

./: .gitignore  Cargo.toml
.cargo/: config.toml
python/: bridge.py  flow.md  main.py
python/certs/: ca.crt  ca.key  client.crt.der  client.key.der  server.crt.der  server.key  server_chain.crt
python/web/: sozo_web.html
sozo/: Cargo.toml
sozo/.cargo/: config.toml
sozo/modules/: plugin_template
sozo/modules/file_ops/: Cargo.toml
sozo/modules/file_ops/src/: cat.rs  copy.rs  copy_and_move.rs  copy_move.rs  lib.rs  mv.rs  remove.rs  stat.rs
sozo/modules/log_ops/: Cargo.toml
sozo/sozo_api/: Cargo.toml
sozo/sozo_api/src/: debug.rs  lib.rs  plugin.rs
sozo/sozo_core/: Cargo.toml
sozo/sozo_core/src/: lib.rs
sozo/sozo_core/src/bus/: bus.rs  mod.rs
sozo/sozo_core/src/loader/: loader.rs
sozo/sozo_core/src/quic/: mod.rs  packet.rs  quic.rs  spki.rs
sozo/sozo_core/src/shell/: ls.rs  mod.rs  netstat.rs  shell.rs
sozo_c2/: bridge.py  modules.py  server.py
sozo_c2/certs/: ca.crt.der  ca.srl  cert_gen.sh  server.crt
sozo_c2/web/: sozo_web.html
src/: lib.rs
src/bus/: bus.rs  mod.rs  module.rs
src/loader/: loader.rs  mod.rs
src/quic/: packet.rs  quic.rs
src/shell/: ls.rs  mod.rs  netstat.rs  shell.rs  tasklist.rs
