[package]
name = "sozo_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sozo_api = {workspace = true}
rand = "0.10.1"
async-trait = "0.1.89"
ctor = "1.0.3"
libc = "1.0.0-alpha.3"
quinn = { version = "0.11.9", features = ["rustls", "ring"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
sha2 = "0.11.0"
x509-parser = "0.18.1"
