[package]
name = "file_ops"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustix = { version = "1.1.4", features = ["fs"] }
sozo_api = { workspace = true }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
